Fix scaling on mobile

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     
     background-color: rgba(0,0,0, 0.35);
     border-radius: 24px 24px 24px 24px;
-    padding: 12px;
+    padding: 10px;
     width: fit-content;
 
     margin: auto;
@@ -91,7 +91,7 @@ img {
 
 #bar {
     top: 0;
-    width: 376px;
+    width: 352px;
     height: 20px;
 
     margin: auto;
